--- a/manage_store/nbproject/project.properties
+++ b/manage_store/nbproject/project.properties
@@ -12,7 +12,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=index
+client.urlPart=login
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Users\\minhh\\Desktop\\lib\\mysql-connector-java-5.1.44-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +45,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
