--- a/manage_store/nbproject/project.properties
+++ b/manage_store/nbproject/project.properties
@@ -28,6 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.2.jar=E:\\4_Tai_Lieu_Nam_KI\\T5_Lap_trinh_nang_cao\\springmvc_hiber\\springmvc_hiber\\lib\\commons-fileupload-1.3.2.jar
+file.reference.jackson-core-2.6.3.jar=E:\\4_Tai_Lieu_Nam_KI\\T5_Lap_trinh_nang_cao\\springmvc_hiber\\springmvc_hiber\\lib\\jackson-core-2.6.3.jar
+file.reference.mysql-connector-java-5.1.44.jar=E:\\4_Tai_Lieu_Nam_KI\\T5_Lap_trinh_nang_cao\\springmvc_hiber\\springmvc_hiber\\lib\\mysql-connector-java-5.1.44.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +47,10 @@ jar.compress=false
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.commons-fileupload-1.3.2.jar}:\
+    ${file.reference.jackson-core-2.6.3.jar}:\
+    ${file.reference.mysql-connector-java-5.1.44.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
